add route for the data save

--- a/Node Script/.env
+++ b/Node Script/.env
@@ -1,1 +1,2 @@
 PORT = 3007
+CONNECTION_STRING_ATLAS = mongodb+srv://guptaharsh137:ahkQRsy8yusHkE8c@naturemarkapp.zugynic.mongodb.net/Naturemark?retryWrites=true&w=majority
